<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenuActivity">

    <Button
        android:id="@+id/btnMenuAlunos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/alunos"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuLivros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenuBibliotecarios"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/bibliotecarios"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuLivros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuAlunos" />

    <Button
        android:id="@+id/btnMenuLivros"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/livros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenuEmprestimos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/empr_stimos"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuDevolucoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuLivros" />

    <Button
        android:id="@+id/btnMenuDevolucoes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/devolu_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuLivros" />

    <Button
        android:id="@+id/btnMenuVoltar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/sair"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>