<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DevolucoesActivity">

    <Button
        android:id="@+id/btnDevolucoesVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnVoltar"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDevolucoesExcluir"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDevolucoesExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnExcluir"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDevolucoesSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnSalvar"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDevolucoesExcluir" />

    <TextView
        android:id="@+id/txtDevolucoesUUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uuid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDevolucoesBibliotecario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpf_bibliotecario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDevolucoesEmprestimosAbertos" />

    <EditText
        android:id="@+id/edtTxtDevolucoesBibliotecario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/cpf"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDevolucoesBibliotecario" />

    <TextView
        android:id="@+id/txtDevolucoesDataDevolucao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_de_devolucao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtDevolucoesBibliotecario" />

    <EditText
        android:id="@+id/edtTxtDevolucoesDataDevolucao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/data_de_devolucao"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDevolucoesDataDevolucao" />

    <TextView
        android:id="@+id/txtDevolucoesFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtDevolucoesDataDevolucao" />

    <ImageButton
        android:id="@+id/imgBtnDevolucoes"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDevolucoesFoto"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Spinner
        android:id="@+id/spinnerDevolucoesEmprestimosAbertos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDevolucoesUUID" />
</androidx.constraintlayout.widget.ConstraintLayout>